--- a/style.css
+++ b/style.css
@@ -1,5 +1,36 @@
 body {
+  text-align:center;
   width: 100%;
   height: 100%;
   margin: 0;
+}
+h1{
+  text-align:center;
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+header a{
+  padding-left:10px;
+  padding-right:10px;
+  background-color: red;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align:center;
+}
+
+#details {
+  display:block;
+  text-align:center;
+}
+#details div{
+  text-align:center;
+  width:25%;
+  float:left;
+  background-color:red;
+  
 }
